# s21_calc_v1

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yaml
src/: CMakeLists.txt  Makefile
src/apps/: CMakeLists.txt  manual_test.c  smart_calc_app.cpp
src/cmake/: AddGitSubmodule.cmake  FindCheckLib.cmake  FindGLFW.cmake
src/docs/: CMakeLists.txt  mainpage.md
src/include/SmartCalc/: smartcalc.h
src/include/calc_rpn/: calc_deque.h  calc_expression.h  calc_rpn.h  calc_token.h  shunting_yard.h  tokenize_expression.h  validate.h
src/include/credit_calc/: credit_calc.h
src/include/deposit_calc/: deposit_calc.h
src/include/implot/: implot_internal.h
src/include/smartCalc/: smartCalc.hpp
src/include/smart_calc/: base_calc.hpp  base_calculator.hpp  calculator.hpp  credit_calculator.hpp  deposit_calculator.hpp  plot_calc.hpp  plot_calculator.hpp  smart_calc.hpp  smart_calc_state.hpp
src/src/: CMakeLists.txt  calc_deque.c  calc_rpn.c  calc_shunting_yard.c  shunting_yard.c  stupid_test.c  tokenize_expression.c  validate.c  validate_helpers.h
src/src/SmartCalc/: CMakeLists.txt  main.cpp  smartcalc.cpp  smartcalc.ui
src/src/calc_rpn/: CMakeLists.txt  calc_expression.c  calc_internal.h  calc_rpn.h  calc_token.h  deque.c  evaluate_math.c  evaluate_rpn.c  match_token.c  match_token.h  tokenize_expression.c  tokenize_expression.h  validate.c  validate_helpers.c  validate_helpers.h  validate_math_expression.c  validators.c
src/src/credit_calc/: CMakeLists.txt  credit_calc.c
src/src/deposit_calc/: CMakeLists.txt  deposit_calc.c
src/src/imgui/: CMakeLists.txt
src/src/imgui/backends/: imgui_impl_opengl3.cpp
src/src/implot/: CMakeLists.txt
src/src/smart_calc/: CMakeLists.txt  base_calc.cpp  base_calculator.cpp  calculator.cpp  credit_calculator.cpp  deposit_calculator.cpp  plot_calc.cpp  plot_calculator.cpp  smartCalc.cpp  smartCalcGlfwInit.cpp  smart_calc.cpp  smart_calc_state.cpp
src/src/tests/: CMakeLists.txt  test_suites.h  tests_calc_deque.c  tests_deque.c  tests_main.c  tests_match_token.c  tests_tokenize_expression.c  tests_validate.c  tests_validators.c
src/tests/: CMakeLists.txt  test_suites.h  tests_calc_deque.c  tests_do_shunting_yard.c  tests_evaluate_rpn.c  tests_main.c  tests_tokenize_expression.c  tests_tokenize_once_function.c  tests_validate.c
src/tests/calc_credit/: CMakeLists.txt  master_suite.c  test_suites.h  tests_get_credit_payments.c  tests_get_differentiated_payments.c  tests_main.c
src/tests/calc_rpn/: CMakeLists.txt  master_suite.c  test_suites.h  tests_do_shunting_yard.c  tests_evaluate_math.c  tests_evaluate_rpn.c  tests_main.c  tests_tokenize_expression.c  tests_tokenize_once_function.c  tests_validate_math_expression.c
src/tests/credit_calc/: CMakeLists.txt  tests_get_credit_payments.c
src/tests/deposit_calc/: CMakeLists.txt  master_suite.c  test_suites.h  tests_get_deposit_payments.c  tests_main.c
